# nexus-notetaker-discord-bot

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.vault.yml  docker-compose.yml  docker-run-locally.bat  docker-run-locally.sh  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  publish.yml
adapters/discord/: package.json
adapters/slack/: package.json
docs/: architecture.md  deploy.md  docker.md  hosting.md  multi-platform.md  slack-bot-implementation.md  testing_guide.md
oracle/: Dockerfile  pyproject.toml
oracle/alembic/: env.py
oracle/alembic/versions/: 9ba4a8b39c3f_initial_schema_11_tables.py  ee175c71814a_initial_schema_11_tables.py
oracle/app/: __init__.py  config.py  main.py
oracle/app/api/: deps.py
oracle/app/api/routes/: __init__.py  action_items.py  artifacts.py  auth.py  events.py  insights.py  orgs.py  platform_links.py
oracle/app/core/: auth.py  crypto.py  logging.py  queue.py
oracle/app/models/: __init__.py  artifact.py  base.py  enums.py  event.py  org.py  platform.py  team.py  user.py
oracle/app/repositories/: action_item_repo.py  artifact_repo.py  base.py  event_repo.py  org_repo.py  user_repo.py
oracle/app/schemas/: __init__.py  artifact.py  auth.py  event.py  org.py
oracle/app/services/intelligence/: pipeline.py  summarizer.py
secrets/: README.md
src/: index.js
src/commands/: config.js  dispatch.js  help.js  join.js  leave.js  register.js
src/config/: db.js  guildConfig.js  secrets.js
src/core/: registry.js
src/llm/: index.js  ollama.js
(+56 files in other folders)
